# mtol

./: .gitignore  README.md  notes.md  stream_title
agda/: .gitignore  README.md
agda/snippets/: fizzbuzz  fizzbuzz.agda
agda/snippets/taste/: hello-world-dep.agda  hello-world-prog  hello-world-prog.agda  (+1 more)
c/: README.md
c/hello_world/: .gitignore  compile_commands.json  makefile
c/snippets/: fizzbuzz.c
c/twitch_bot/: .gitignore  compile_commands.json  makefile
common_lisp/: README.md
common_lisp/hello_world/: README.markdown  README.org  hello_world.asd
coq/: README.md
coq/snippets/: fizzbuzz.v
cpp/: .gitignore  README.md
cpp/hello_world/: Makefile  compile_commands.json
cpp/snippets/: fizzbuzz.cpp
cpp/twitch_bot/: CMakeCache.txt  CMakeLists.txt  Makefile
haskell/: README.md
haskell/hello-world/: hello-world.cabal  package.yaml  stack.yaml
haskell/snippets/: fizzbuzz.hs
idris/: README.md
idris/snippets/: Dependent.idr  Fizzbuzz.idr  hello.idr
ocaml/: .gitignore  README.md
ocaml/hello_world/: dune-project  flake.nix  hello_world.opam
ocaml/hello_world/lib/: dune  hello_world.ml  hello_world.mli
ocaml/hello_world/test/: dune
ocaml/snippets/: fizzbuzz.ml  metamod.ml  metamod.mli
racket/: README.md
racket/snippets/: fizzbuzz.rkt
rust/: Cargo.toml  README.md
rust/src/: main.rs
scheme/: README.md
scheme/hello_world/: server.scm
scheme/snippets/: fizzbuzz.scm
standardML/: README.md
standardML/aoc-2022/: day1.sml
standardML/snippets/: fizzbuzz.sml
zig/: README.md
zig/hello_world/: build.zig  build.zig.zon
(+16 files in other folders)
