[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.29"
url = "2.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio-tungstenite]
features = ["native-tls"]
version = "0.20.1"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
version = "1.33.0"
